<resources>
    <string name="app_name">RecyclerView</string>
    <string name="limit">Limit : 0</string>
    <string name="search">Search</string>
    <string name="track">Track rating</string>
    <string name="artist">Artist Rating</string>
    <string name="sortBy">Sort By : </string>
    <string name="searchResult">Search results</string>
    <string name="trackname">Track Name :</string>
    <string name="artistname">Artist Name :</string>
    <string name="album">Album : </string>
    <string name="date">Date :</string>
    <string name="price">Price :</string>
</resources>
